@@ -19,6 +19,7 @@ export(side_color_plot)
 import(dendextend)
 import(ggplot2)
 importFrom(dendextend,color_branches)
+importFrom(dendextend,find_k)
 importFrom(dendextend,is.dendrogram)
 importFrom(dendextend,rotate)
 importFrom(dendextend,seriate_dendrogram)
